# zero-to-prod

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  deny.toml  fly.toml
.cargo/: config.toml
.github/workflows/: audit.yaml  deny.yaml  lint.yaml  test.yaml
configuration/: base.toml  local.toml
migrations/: 20240624041921_create_subscriptions_table.sql
scripts/: init_db.sh
scripts/local/: init_db.sh
scripts/production/: llvm.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  tracing.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
