[package]
name = "ztp"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ztp"

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40" }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.9.0", features = ["std", "v7"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
]

[dev-dependencies]
once_cell = "1.19.0"
reqwest = "0.12.5"
