[package]
name = "ztp"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ztp"

[dependencies]
actix-web = "4.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.14"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.9", features = ["std", "v7"] }
validator = "0.18.1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
]

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
once_cell = "1.19"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = { version = "0.12", features = ["rustls-tls"] }
